CI: force FSTYP for zoned config
For some reason the FSTYP is not set or set to a wrong value and fails
in the GH actions:

  mount: /mnt/test: unknown filesystem type 'xfs'.

Other tests work, so do the fixup only for zoned config now.

Signed-off-by: David Sterba <dsterba@suse.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,9 @@ jobs:
     defaults:
       run:
         working-directory: /root/fstests
+    env:
+      # Override if missing in configs
+      FSTYP: "btrfs"
     strategy:
       fail-fast: false
     steps:
