CI: do not collect cores on cancelled workflows
Cancelling the workflow takes some time and may require clicking
repeatedly as new jobs still start. The core collection is unconditional
and usually not needed when cancellation is requested. Change the
condition to proceed only when the previous steps finish.

Signed-off-by: David Sterba <dsterba@suse.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,7 +159,8 @@ jobs:
   collect-vmcore:
     runs-on: [self-hosted, linux, x64, vmhost]
     needs: [test, test-zoned]
-    if: always()
+    # Do not collect core when cancelled
+    if: success() || failure()
     strategy:
       matrix:
         vm: [xfstests5, xfstests6, xfstests7, xfstests8, xfstests9, xfstests10]
@@ -176,7 +177,8 @@ jobs:
   collect-vmcore-arm:
     runs-on: [self-hosted, linux, ARM64, vmhost]
     needs: test-arm
-    if: always()
+    # Do not collect core when cancelled
+    if: success() || failure()
     strategy:
       matrix:
         vm: [xfstests11, xfstests12]
